[package]
name = "evm"
version = "0.1.0"
authors = ["Emanuele Valzano <emanuele.valzano@proton.me>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
ethers = "2.0.14"
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
	"derive",
] }

[features]
benchmark = []
