[package]
name = "mempool"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tungstenite = "0.24.0"
ed25519-dalek = "1.0.1"
codec = { package = "parity-scale-codec", version = "3.6.9", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
base64 = "0.22.1"
bytes = "1.0.1"
log = "0.4.14"
anyhow = "1.0.97"
bincode = "1.3.3"
futures = "0.3.14"
async-trait = "0.1.50"
crypto = { path = "../crypto" }
store = { path = "../store" }
transport = { path = "../transport" }
brotli = "7.0.0"
evm = { path = "../evm" }

[dev-dependencies]
tokio-util = { version = "0.7.3", features= ["codec"] }
rand = "0.7.3"

[features]
benchmark = []
