[package]
name = "node"
version = "0.1.0"
authors = ["Emanuele Valzano <emanuele.valzano@proton.me>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.5.0", features = ["macros", "sync"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
log = "0.4.0"
bytes = "1.0.1"
bincode = "1.3.1"
futures = "0.3.8"
clap = { version = "4", features = ["derive"] }
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
rand = "0.7.3"
thiserror = "1.0.21"
anyhow = "1.0.38"
async-trait = "0.1.50"

crypto = { path = "../crypto" }
store = { path = "../store" }
consensus = { path = "../consensus" }
feed = { path = "../feed" }
transport = { path = "../transport" }

[features]
benchmark = ["consensus/benchmark"]